# cereal

./: Cargo.toml  README.md  help.txt  loader_trace  simulator
data/: public-branch0_script
data/asm/: wireframe.dis
data/c/: bit.c  global_variable.c  grouping.c  grouping2.c  negation.c  precedence.c  precedence2.c  procedure_call.c  procedure_call_with_args.c  simple_libc.asm  simple_os.asm  stack_variable.c
data/chess/: Chess.asm  ChessDebug.asm  os.asm
src/: asm_instruction.rs  block.rs  char_utils.rs  ir.rs  lexer.rs  lib.rs  link.rs  main.rs  parser.rs  printer.rs  span.rs  tools.rs
src/assembler/: lexer.rs  mod.rs  parser.rs
src/c/: ast.rs  cg.rs  lexer.rs  mod.rs  parser.rs
src/simulator/: command.rs  decode.rs  help.txt  loader.rs  machine.rs  mod.rs
tests/: compiler.rs  simulator.rs
tests/scripts/: public-BR_arith_script  public-branch0_script  public-test_basic_script  public-test_checkers_img_script  wireframe_script
