[package]
name = "cereal"
version = "0.1.0"
edition = "2021"
default-run = "compiler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }

[[bin]]
name = "compiler"

[[bin]]
name = "simulator"