[package]
name = "cereal"
version = "0.1.0"
edition = "2021"
default-run = "simulator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
eframe = "0.21.3"

[[bin]]
name = "compiler"

[[bin]]
name = "simulator"
